--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,37 @@
-# PyTorch와 관련 패키지
+# Core deep learning framework
 torch>=2.0.0
 torchvision>=0.15.0
 torchaudio>=2.0.0
 
-# Computer Vision
-timm>=0.9.0
+# Computer vision and image processing
 opencv-python>=4.8.0
-albumentations>=1.3.0
+Pillow>=9.0.0
+numpy>=1.21.0
 
-# 데이터 처리
-numpy>=1.24.0
-pandas>=2.0.0
-pillow>=10.0.0
+# Data handling and parsing
+lxml>=4.9.0
+PyYAML>=6.0
 
-# 시각화
-matplotlib>=3.7.0
-seaborn>=0.12.0
+# Training utilities
+tqdm>=4.64.0
+matplotlib>=3.5.0
+tensorboard>=2.10.0
 
-# 개발 도구
-pytest>=7.0.0
-black>=23.0.0
-flake8>=6.0.0
+# Scientific computing
+scipy>=1.9.0
 
-# 기타 유틸리티
-scikit-learn>=1.3.0
-scipy>=1.10.0
-tqdm>=4.65.0 
+# Configuration parsing
+configparser>=5.3.0
+
+# Logging and utilities
+colorlog>=6.7.0
+
+# Optional: For faster data loading
+# Uncomment if you want to use these optimizations
+# ninja>=1.10.0
+# scikit-image>=0.19.0
+
+# Development tools (optional)
+# jupyter>=1.0.0
+# ipython>=8.0.0
+# pytest>=7.0.0
